# AI-Driven-Development

30_days_challenge/task_1/: readme.md
30_days_challenge/task_4/: .gitignore  GEMINI.md  README.md  agent.py  main.py  pyproject.toml  tools.py
30_days_challenge/task_4/frontend/: index.html  main.js  style.css
30_days_challenge/task_5/: readme.md
30_days_challenge/task_7/: readme.md
30_days_challenge/task_8/: .gitignore  pyproject.toml  submission.md
30_days_challenge/task_8/.specify/memory/: agent-context.md  constitution.md
30_days_challenge/task_8/history/prompts/calculator-expression/: 0002-create-calculator-feature-specification.spec.prompt.md  0003-generate-calculator-feature-plan.plan.prompt.md  0004-generate-calculator-implementation-tasks.tasks.prompt.md  0005-implement-calculator-feature.green.prompt.md
30_days_challenge/task_8/history/prompts/constitution/: 0001-initialize-project-constitution.constitution.prompt.md
30_days_challenge/task_8/specs/: calculator-expression.spec.md
30_days_challenge/task_8/specs/calculator-expression/: data-model.md  plan.md  quickstart.md  research.md  tasks.md
30_days_challenge/task_8/specs/calculator-expression/contracts/: cli.md
30_days_challenge/task_8/specs/checklists/: calculator-expression.requirements.md
30_days_challenge/task_8/src/calculator/: evaluator.py  main.py  parser.py
30_days_challenge/task_8/src/cli/: app.py
30_days_challenge/task_9_10/: readme.md  task_10.md  task_9.md
